Active storage validations gem + form touch ups

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -13,19 +13,19 @@
     </div>
       <%= simple_form_for [@business, @review] do |f|%>
       <%#= f.hidden_field :service_id, :value => @review.service.id %>
-      <%= f.input :title, label:  "What would you like to title your review?" %>
+      <%= f.input :title, label:  "What would you like to title your review?", placeholder: 'Best cafe ever!' %>
       <%= f.input :business_rating, collection: (1..5).to_a, label: "Please rate your overall experience with this business" %>
-      <%= f.input :business_review, as: :rich_text_area, label: "Review your experience in more detail" %>
+      <%= f.input :business_review, as: :rich_text_area, label: "Please review your experience with this business in more detail", placeholder: 'This cafe has the best ambiance, staff, and mocha latte that I have ever had in my life!  The wifi is fast, staff are hospitable, and the crowd is friendly...' %>
       <%#= f.input :service, collection: (1..5).to_a, label: "Rate your overall service" %>
-      <%= f.input :value, collection: (1..5).to_a, label: "Rate the value of the business + their services" %>
-      <%= f.input :atmosphere, collection: (1..5).to_a, label: "Rate your atmosphere" %>
+      <%= f.input :value, collection: (1..5).to_a, label: "Rate the financial value of the business + their services" %>
+      <%= f.input :atmosphere, collection: (1..5).to_a, label: "Rate the atmosphere of the business" %>
       <%= f.input :service_review_too, label:  "Would you also like to review the specific service that you received?" %>
       <div id="service_review_part" style="display:none;">
       <%= f.input :service_id, label: "Which service did you receive?", collection: @business.services %>
-      <%= f.input :service_rating, collection: (1..5).to_a, label: "Rate your service" %>
-      <%= f.input :service_review, as: :rich_text_area, label: "Review your service" %>
+      <%= f.input :service_rating, collection: (1..5).to_a, label: "Rate the service overall" %>
+      <%= f.input :service_review, as: :rich_text_area, label: "Review the service", placeholder: 'This has to be the best mocha latte in the entire world.  Nothing else out there even comes close!' %>
       </div>
-      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Please attach photos that can prove you interacted with this business" %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Please attach at least one photo as proof that you interacted with this business", error: 'You need to include at least one photo' %>
       <div style="text-align:center">
       <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
       </div>
