Base action cable functionality implemented though not yet fully operational

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Feedbacks#show</h1>
 <p>Find me in app/views/feedbacks/show.html.erb</p>
+YOU NEED TO PUT THE FEEDBACK AND A LINK TO RESPOND TO THE FEEDBACK.USER VIA ACTION CABLE!!!!!
