--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -7,8 +7,8 @@
       <%= f.input :price_cents, label: 'How much did you charge for this project?', placeholder: "0" %>
       <%= f.input :completion, label: "When was this project completed?"%>
       <%= f.input :time_taken, label: "How long did this project take for you to complete?", placeholder: "10 days" %>
-      <%#= f.input :service_id, label: "Which service of yours is this perk attached to, if any?", collection: @business.services %>
-      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Attach on photos of your project", error: 'You need to include at least one photo' %>
+      <%= f.input :service_id, label: "Which service of yours is this project portfolio displaying, if any?", collection: @business.services %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Attach up to 20 photos of this project", error: 'You need to include at least one photo' %>
       <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
       </div>
       <% end %>
