--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -12,7 +12,7 @@
       <div id="service_details" style="display:block;">
       <%= f.input :service_taggings, collection: Business.offerings, input_html: {multiple: true, id: "service_tagging_new", class: "select2"}, label: "Please add some descriptive tags to the service that you're offering so that local users could find it more easily" %>
       </div>
-      <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Please attach at least one photo of this service", error: 'You need to include at least one photo' %>
+      <%= f.input :photo, as: :file, label: "Please attach one photo of this service", error: 'You need to include one photo' %>
       <div style="text-align:center">
       <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
       </div>
