--- a/app/views/logos/edit.html.erb
+++ b/app/views/logos/edit.html.erb
@@ -1,6 +1,8 @@
-<div>
-  <%= simple_form_for [ @logo, @business ], remote: true do |f| %>
-    <%= f.input :photo, as: :file, label: "Please upload your logo or preferred photo to be the face of your business" %>
-    <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
-  <% end %>
+<div class="row align-items-center justify-content-center">
+  <div class="col-sm-8 card p-4 m-4 bg-light ">
+    <%= simple_form_for [ @business, @logo ] do |f| %>
+        <%= f.input :photo, as: :file, label: "Would you like to update your logo or primary business photo?", error: 'You need to include a photo' %>
+        <%= f.button :submit, 'Submit', class: 'btn btn-primary mt-2'%>
+    <% end %>
+  </div>
 </div>
