Business logo / main photo working now

--- a/app/views/pages/business_dashboard.html.erb
+++ b/app/views/pages/business_dashboard.html.erb
@@ -5,5 +5,5 @@
   <%# end %>
 </div>
 <div>
-  <%#= cl_image_tag @business.logo.photo.key, height: 300, width: 400, crop: :fill %>
+  <%= cl_image_tag @business.logo.photo.key, height: 300, width: 400, crop: :fill %>
 </div>
