--- a/app/views/pages/business_dashboard.html.erb
+++ b/app/views/pages/business_dashboard.html.erb
@@ -1,9 +1,56 @@
 <div>
-  <%#= simple_form_for [ @logo, @business ], remote: true do |f| %>
-    <%#= f.input :photo, as: :file, label: "Please upload your logo or preferred photo to be the face of your business" %>
-    <%#= f.button :submit, 'Submit', class: 'btn btn-primary'%>
-  <%# end %>
+  <%= simple_form_for [ @logo, @business ], remote: true do |f| %>
+    <%= f.input :photo, as: :file, label: "Please upload your logo or preferred photo to be the face of your business" %>
+    <%= f.button :submit, 'Submit', class: 'btn btn-primary'%>
+  <% end %>
 </div>
+
 <div>
-  <%= cl_image_tag @business.logo.photo.key, height: 300, width: 400, crop: :fill %>
+  <h4>Your business logo</h4>
+  <%= cl_image_tag @business.logo.photo.key, height: 300, width: 400, crop: :fill if @business.logo %>
+</div>
+
+<div>
+  <h4>All of your services</h4>
+  <% @business.services.each do |service| %>
+  <%= link_to service.name, edit_business_service_path(@business, service) %>
+  <% end %>
+</div>
+
+<div>
+  <h4>All of your customer feedback</h4>
+  <%= link_to 'See all of your customer feedback', business_feedbacks_path(@business) %>
+</div>
+
+<div>
+  <h4>All of the perks that you're offering customers</h4>
+  <% @business.perks.each do |perk| %>
+  <%= link_to perk.title, edit_business_perk_path(@business, perk)  %>
+  <% end %>
+</div>
+
+<div>
+  <h4>All of your public customer reviews</h4>
+  <h5>Your average customer rating is a </h5>
+  <% @business.reviews.each do |review| %>
+  <%= link_to review.title, business_review_path(@business, review), method: :get  %>
+  <% end %>
+</div>
+
+<div>
+  <h4>All of your projects that you're showing customers</h4>
+  <% @business.projects.each do |project| %>
+  <%= link_to project.title, edit_business_project_path(@business, project)  %>
+  <% end %>
+</div>
+
+<div>
+  <h4>Your verification QR code</h4>
+  <%= link_to 'Show this QR code to your customers', business_verificationqr_path(@business) %>
+</div>
+
+<div>
+  <h2>FIX THIS SHIT FUCKFACE</h2>
+  <h4>Your message inbox</h4>
+  <%= link_to 'Inbox', chatroom_path(@business) %>
 </div>
